5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1621_2918.log
== SUBMITION (2019-04-01 19:11:19) 
-- CODE:
p=float(input("qual o preco do igresso?"))
q= int(input("qual a qauntidade?"))


a=(p*q) * (20/100)
print(round(a,2))
-- EXECUTION TIME:
0.209603
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
43.12
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
25.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:11:22) 
-- CODE:
p=float(input("qual o preco do igresso?"))
q= int(input("qual a qauntidade?"))


a=(p*q) * (20/100)
print(round(a,2))
-- OUTPUT:
28.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:12:14) 
-- CODE:
p=float(input("qual o valor  do igresso?"))
q= int(input("qual a qauntidade?"))
a=(p*q)*(20/100)
print(round(a,2))
-- EXECUTION TIME:
0.138501
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
43.12
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
25.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:12:21) 
-- CODE:
p=float(input("qual o valor  do igresso?"))
q= int(input("qual a qauntidade?"))
a=(p*q)*(20/100)
print(round(a,2))
-- OUTPUT:
28.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:13:06) 
-- CODE:
p=float(input("qual o valor  do igresso?"))
q= int(input("qual a qauntidade?"))
a=(p*q)*(20/100)
print(round(a,  2))
-- EXECUTION TIME:
0.148966
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
43.12
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
25.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:13:22) 
-- CODE:
p=float(input("qual o valor  do igresso:?"))
q= int(input("qual a qauntidade:?"))
a=(p*q)*(20/100)
print(round(a,  2))
-- EXECUTION TIME:
0.213675
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
43.12
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
25.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:13:24) 
-- CODE:
p=float(input("qual o valor  do igresso:?"))
q= int(input("qual a qauntidade:?"))
a=(p*q)*(20/100)
print(round(a,  2))
-- OUTPUT:
28.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:14:00) 
-- CODE:
p=float(input("qual o valor  do igresso:?"))
q= float(input("qual a qauntidade:?"))
a=(p*q)*(20/100)
print(round(a,  2))
-- EXECUTION TIME:
0.142565
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
43.12
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
25.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:14:47) 
-- CODE:
p=float(input("qual o valor  do igresso:?"))
q= int(input("qual a qauntidade:?"))
a=(q*p)*(20/100)
print(round(a,  2))
-- EXECUTION TIME:
0.214687
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
43.12
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
25.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:17:09) 
-- CODE:
p=float(input("qual o valor do igresso?"))
q= int(input("qual a qauntidade de ingresso?"))
a=(p*q)*(20/100)
print(round(a,2))
-- EXECUTION TIME:
0.147678
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
43.12
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
25.45
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:18:28) 
-- CODE:
A=float(input("qual o valor do igresso?"))
B= int(input("qual a qauntidade de ingresso?"))
a=(A*B)*(20/100)
print(round(A,2))
-- EXECUTION TIME:
0.152071
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:
28.5
-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:
26.95
-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:
42.42
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:18:56) 
-- CODE:
A=float(input("qual o valor do igresso?"))
B=int(input("qual a qauntidade de ingresso?"))
a=(A*B)*(20/100)
print(round(A,2))
-- OUTPUT:
28.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:22:28) 
-- CODE:
p=float(input("qual o valor do igresso?"))
q=int(input("qual a qauntidade de ingresso?"))
a=(p*q)*(20/100)
print(round(A,0,2))
-- EXECUTION TIME:
0.14943
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 4, in <module>
    print(round(A,0,2))
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:23:35) 
-- CODE:
p=float(input("100"))
q=int(input("1?"))
a=(p*q)*(20/100)
print(round(A,0,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(A,0,2))
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:25:12) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=float(input("a quantidade de ingressos"))

a=(p*q)*(20/100)
print(round(A,2))
-- EXECUTION TIME:
0.206097
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 5, in <module>
    print(round(A,2))
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:25:28) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=float(input("a quantidade de ingressos"))

a=(p*q)*(20/100)
print(round(A,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(A,2))
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:26:52) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=float(input("a quantidade de ingressos"))

a=int(p*q)*(20/100)
print=int(round(A,2))
-- EXECUTION TIME:
0.243624
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 5, in <module>
    print=int(round(A,2))
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:27:19) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=int(input("a quantidade de ingressos"))

a=(p*q)*(20/100)
print=(round(A,2))
-- EXECUTION TIME:
0.154815
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 5, in <module>
    print=(round(A,2))
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:27:51) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=int(input("a quantidade de ingressos"))

a=(p*q)*(20/100)
print=(round(A,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print=(round(A,2))
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:39:27) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=int(input("a quantidade de ingressos"))
valor=p*(20/100)
total=valor*q
a=(p*q)*(20/100)
print=(round(A,2))
-- EXECUTION TIME:
0.165686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 6, in <module>
    print=(round(A,2))
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:39:29) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=int(input("a quantidade de ingressos"))
valor=p*(20/100)
total=valor*q
a=(p*q)*(20/100)
print=(round(A,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print=(round(A,2))
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:40:32) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=int(input("a quantidade de ingressos"))
valor=p*(20/100)
total=valor*q
print=(round(A,2))
-- EXECUTION TIME:
0.128081
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1621/2918/main.py", line 5, in <module>
    print=(round(A,2))
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:45:08) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=int(input("a quantidade de ingressos"))
valor=p*(20/100)
total=valor*q
print=(round(total,2))
-- EXECUTION TIME:
0.156294
-- TEST CASE 1:
---- input:
28.50
5
---- correct output:
114.0
---- user output:

-- TEST CASE 2:
---- input:
26.95
8
---- correct output:
172.48
---- user output:

-- TEST CASE 3:
---- input:
42.42
3
---- correct output:
101.81
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:45:11) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=int(input("a quantidade de ingressos"))
valor=p*(20/100)
total=valor*q
print=(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print=(round(A,2))
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 18:17:42) 
-- CODE:
p=float(input("o preco do valor integral do ingresso?"))
q=int(input("a quantidade de ingressos"))
valor=p*(20/100)
total=valor*q
print=(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print=(round(A,2))
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
